--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
