--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
             <artifactId>cglib-nodep</artifactId>
             <version>2.2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
