E.1.2.1 单例模式获取对象需要确保线程安全

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - /tmp/docker-compose/config/mysql/mysql.cnf:/etc/mysql/conf.d/mysql.cnf:ro
-      - /tmp/docker-compose/data/mysql:/var/lib/mysql
+      - ${HOME}/work/database/docker-compose/config/mysql/mysql.cnf:/etc/mysql/conf.d/mysql.cnf:ro
+      - ${HOME}/work/database/docker-compose/data/mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: "123456"
       TZ: 'Asia/Shanghai'
