--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   pr-comment:
-    # 只在PR的评论上触发，忽略issue的评论
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
@@ -29,17 +28,18 @@ jobs:
               repo: context.repo.repo,
               pull_number: context.issue.number
             });
+            fs.writeFileSync('pr.json', JSON.stringify(pull));
             return pull.data;
 
       # 这里可以运行你的自定义脚本
       - name: Run Custom Script
+        if: contains(github.event.comment.body, '/qoder')
         id: script
         run: |
-          # 这里放置你要运行的脚本
-          # 例如：
-          echo "Processing comment: ${{ github.event.comment.body }}"
-          # 将脚本的输出保存到输出变量中
-          echo "script_output=Hello from the script!" >> $GITHUB_OUTPUT
+          wget 'https://lingma-agents-public.oss-cn-hangzhou.aliyuncs.com/qoder-cli/qoder-cli-linux-x64-preconfig'
+          chmod +x qoder-cli-linux-x64-preconfig
+          ./qoder-cli-linux-x64-preconfig -p "你是CodeReview专家，你需要根据PullRequest信息，专业的回答用户的问题，你回答的内容会以Github Issue评论的格式显示到对应PullRequest的评论列表中，因此要确保格式正确，内容清晰。PullRequest的信息在pr.json文件中，将你回答的内容写入response.txt文件。用户的问题是：${{ github.event.comment.body }}"
+          cat response.txt >> $GITHUB_OUTPUT
 
       # 回复评论
       - name: Reply to Comment
@@ -47,10 +47,10 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const scriptOutput = '${{ steps.script.outputs.script_output }}';
+            const output = `${{ steps.script.outputs.output }}`;
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `👋 Thanks for your comment!\n\nScript output: ${scriptOutput}`
+              body: `${output}`
             });
