--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,9 @@ jobs:
           wget 'https://lingma-agents-public.oss-cn-hangzhou.aliyuncs.com/qoder-cli/qoder-cli-linux-x64-preconfig'
           chmod +x qoder-cli-linux-x64-preconfig
           ./qoder-cli-linux-x64-preconfig -p "你是CodeReview专家，你需要根据PullRequest信息，专业的回答用户的问题，你回答的内容会以Github Issue评论的格式显示到对应PullRequest的评论列表中，因此要确保格式正确，内容清晰。PullRequest的信息在pr.json文件中，将你回答的内容写入response.txt文件。用户的问题是：${{ github.event.comment.body }}"
-          cat response.txt >> $GITHUB_OUTPUT
+          
+          OUTPUT=$(cat response.txt | base64 -w 0)
+          echo "output=$OUTPUT" >> $GITHUB_OUTPUT
 
       # 回复评论
       - name: Reply to Comment
@@ -48,10 +50,11 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const output = `${{ steps.script.outputs.output }}`;
+            const encodedOutput = '${{ steps.script.outputs.output }}';
+            const decodedOutput = Buffer.from(encodedOutput, 'base64').toString();
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `${output}`
+              body: `${decodedOutput}`
             });
